@@ -10,6 +10,12 @@ endif
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
+
+ifneq ($(FOUNDATION_LIB),apple)
+ADDITIONAL_CPPFLAGS += -DNO_OSX_ADDITIONS
+endif
+
+
 GNUSTEP_INSTALLATION_DOMAIN = LOCAL
 
 APP_NAME = iTunesFS
@@ -18,7 +24,7 @@ iTunesFS_PRINCIPAL_CLASS  = NSApplication
 iTunesFS_APPLICATION_ICON = iTunesFS.tiff
 iTunesFS_MAIN_MODEL_FILE  = MainMenu.gorm
 iTunesFS_LANGUAGES        = English German French Italian Spanish Japanese
-iTunesFS_SUBPROJECTS      = FUSEOFS FUSEObjC-GNUstep
+iTunesFS_SUBPROJECTS      = FUSEOFS
 
 iTunesFS_OBJC_PRECOMPILED_HEADERS = common.h
 
@@ -27,18 +33,24 @@ iTunesFS_OBJC_FILES +=				\
 						\
 	iTunesLibrary.m				\
 	iPodLibrary.m				\
+	JBiPodLibrary.m				\
 	iTunesPlaylist.m			\
 	iTunesTrack.m				\
+	iTunesFormatFile.m			\
 	iTunesFSFormatter.m			\
 						\
 	Watchdog.m				\
 						\
+	StreamReader.m				\
 	NSString+Extensions.m			\
 	NSURL+Extensions.m			\
+	NSData+ZlibDecompression.m		\
 
 iTunesFS_LOCALIZED_RESOURCE_FILES +=		\
 	MainMenu.gorm				\
 	Localizable.strings			\
+	AlbumsTrackFormat.txt			\
+	PlaylistsTrackFormat.txt		\
 
 iTunesFS_RESOURCE_FILES +=			\
 	iTunesFS.tiff				\
