@@ -2,4 +2,6 @@
 
 ADDITIONAL_GUI_LIBS     += -lfuse
 
-ADDITIONAL_INCLUDE_DIRS += -IFUSEOFS -IFUSEObjC-GNUstep
+ADDITIONAL_INCLUDE_DIRS += -IFUSEOFS -IFUSEOFS/GSFUSE
+
+ADDITIONAL_CPPFLAGS     += -std=c99
