@@ -74,11 +74,15 @@
 		AD37A2960C01C87E00DF1291 /* iTunesLibrary.m */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.objc; path = iTunesLibrary.m; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
 		AD37A2BE0C01CFA800DF1291 /* README */ = {isa = PBXFileReference; explicitFileType = text; fileEncoding = 4; lineEnding = 0; path = README; sourceTree = "<group>"; };
 		AD37A2C20C01CFB400DF1291 /* NOTES */ = {isa = PBXFileReference; fileEncoding = 5; lastKnownFileType = text; path = NOTES; sourceTree = "<group>"; };
+		AD4C4ED912FDCAF90057C045 /* GMUserFileSystem.h */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.h; path = GMUserFileSystem.h; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
+		AD4C4EDA12FDCAF90057C045 /* GMUserFileSystem.m */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.objc; path = GMUserFileSystem.m; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
+		AD4C4EDB12FDCAF90057C045 /* GNUmakefile */ = {isa = PBXFileReference; explicitFileType = sourcecode.make; fileEncoding = 4; indentWidth = 8; path = GNUmakefile; sourceTree = "<group>"; tabWidth = 8; };
+		AD4C4EDD12FDCC7A0057C045 /* GSFUSE.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = GSFUSE.h; sourceTree = "<group>"; };
+		AD4C4EE812FDCD690057C045 /* FUSESupport.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = FUSESupport.h; sourceTree = "<group>"; };
+		AD4C4F2512FF0E050057C045 /* GMDataBackedFileDelegate.h */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.h; path = GMDataBackedFileDelegate.h; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
+		AD4C4F2612FF0E050057C045 /* GMDataBackedFileDelegate.m */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.objc; path = GMDataBackedFileDelegate.m; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
+		AD4C4F2712FF0E050057C045 /* GMDTrace.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = GMDTrace.h; sourceTree = "<group>"; };
 		AD5A40700C214A1900B1A000 /* README-GNUstep */ = {isa = PBXFileReference; fileEncoding = 5; lastKnownFileType = text; path = "README-GNUstep"; sourceTree = "<group>"; };
-		AD5A407E0C214FCB00B1A000 /* FUSEFileSystem.h */ = {isa = PBXFileReference; fileEncoding = 5; lastKnownFileType = sourcecode.c.h; path = FUSEFileSystem.h; sourceTree = "<group>"; };
-		AD5A407F0C214FCB00B1A000 /* FUSEFileSystem.m */ = {isa = PBXFileReference; fileEncoding = 5; lastKnownFileType = sourcecode.c.objc; path = FUSEFileSystem.m; sourceTree = "<group>"; };
-		AD5A40800C214FCB00B1A000 /* FUSEMain.m */ = {isa = PBXFileReference; fileEncoding = 5; lastKnownFileType = sourcecode.c.objc; path = FUSEMain.m; sourceTree = "<group>"; };
-		AD5A40810C214FCB00B1A000 /* GNUmakefile */ = {isa = PBXFileReference; explicitFileType = sourcecode.make; fileEncoding = 5; path = GNUmakefile; sourceTree = "<group>"; tabWidth = 8; };
 		AD5A40820C214FCB00B1A000 /* GNUmakefile */ = {isa = PBXFileReference; explicitFileType = sourcecode.make; fileEncoding = 5; indentWidth = 8; path = GNUmakefile; sourceTree = "<group>"; tabWidth = 8; };
 		AD5A40830C214FCB00B1A000 /* GNUmakefile.preamble */ = {isa = PBXFileReference; explicitFileType = sourcecode.make; fileEncoding = 5; indentWidth = 8; path = GNUmakefile.preamble; sourceTree = "<group>"; tabWidth = 8; };
 		AD5B5E7A0C0C1A70003B1650 /* NSObject+FUSEOFS.h */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.h; path = "NSObject+FUSEOFS.h"; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
@@ -154,7 +158,6 @@
 				08FB7795FE84155DC02AAC07 /* iTunesFS */,
 				AD5A407C0C214FAA00B1A000 /* GNUstep */,
 				7FEA82C10B456A36001441DE /* Resources */,
-				AD5A407D0C214FCB00B1A000 /* FUSEObjC-GNUstep */,
 				ADBDAB040C02F664004CF795 /* Scripts */,
 				AD95D4090C21C7AF00B96A36 /* examples */,
 				08FB779DFE84155DC02AAC07 /* External Frameworks and Libraries */,
@@ -226,6 +229,7 @@
 			isa = PBXGroup;
 			children = (
 				AD0073DC12F0131500E05C0D /* ChangeLog */,
+				AD4C4EE812FDCD690057C045 /* FUSESupport.h */,
 				AD5B5E7A0C0C1A70003B1650 /* NSObject+FUSEOFS.h */,
 				AD5B5E7B0C0C1A70003B1650 /* NSObject+FUSEOFS.m */,
 				AD0A21B512F44D3500339646 /* FUSEOFSAppController.h */,
@@ -247,6 +251,20 @@
 			path = FUSEOFS;
 			sourceTree = "<group>";
 		};
+		AD4C4EDC12FDCB080057C045 /* GSFUSE */ = {
+			isa = PBXGroup;
+			children = (
+				AD4C4EDB12FDCAF90057C045 /* GNUmakefile */,
+				AD4C4F2712FF0E050057C045 /* GMDTrace.h */,
+				AD4C4EDD12FDCC7A0057C045 /* GSFUSE.h */,
+				AD4C4ED912FDCAF90057C045 /* GMUserFileSystem.h */,
+				AD4C4EDA12FDCAF90057C045 /* GMUserFileSystem.m */,
+				AD4C4F2512FF0E050057C045 /* GMDataBackedFileDelegate.h */,
+				AD4C4F2612FF0E050057C045 /* GMDataBackedFileDelegate.m */,
+			);
+			path = GSFUSE;
+			sourceTree = "<group>";
+		};
 		AD5A407C0C214FAA00B1A000 /* GNUstep */ = {
 			isa = PBXGroup;
 			children = (
@@ -254,17 +272,6 @@
 				AD5A40830C214FCB00B1A000 /* GNUmakefile.preamble */,
 			);
 			name = GNUstep;
-			sourceTree = "<group>";
-		};
-		AD5A407D0C214FCB00B1A000 /* FUSEObjC-GNUstep */ = {
-			isa = PBXGroup;
-			children = (
-				AD5A40810C214FCB00B1A000 /* GNUmakefile */,
-				AD5A407E0C214FCB00B1A000 /* FUSEFileSystem.h */,
-				AD5A407F0C214FCB00B1A000 /* FUSEFileSystem.m */,
-				AD5A40800C214FCB00B1A000 /* FUSEMain.m */,
-			);
-			path = "FUSEObjC-GNUstep";
 			sourceTree = "<group>";
 		};
 		AD81186F0F093D85000786C9 /* filesystems-objc-support */ = {
@@ -314,6 +321,7 @@
 			isa = PBXGroup;
 			children = (
 				ADDCD76C0C26A6640031B215 /* GNUmakefile */,
+				AD4C4EDC12FDCB080057C045 /* GSFUSE */,
 			);
 			name = GNUstep;
 			sourceTree = "<group>";
