@@ -1,3 +1,11 @@
+2011-02-06  Marcus Mueller  <znek@mulle-kybernetik.com>
+
+	* GNUmakefile*, *.[hm]: ported to GNUstep
+
+	* Info.plist: it's 2011 by now
+
+	* iTunesFileSystem.m: fixed an uninitialized variable access
+
 2011-01-29  Marcus Mueller  <znek@mulle-kybernetik.com>
 
 	* iTunesFSController.[hm]: removed. Added a new FUSEOFSAppController
